Fix: Item title overflow

--- a/src/components/Item.module.css
+++ b/src/components/Item.module.css
@@ -127,3 +127,10 @@ h4.dis span {
   width: 100%;
   z-index: 10;
 }
+
+.product-name{
+  overflow: hidden;
+  height: 8rem;
+  white-space: wrap;
+  text-overflow: ellipsis;
+}
